# coding-challenges

./: .gitignore  README.md
json-parser/: cli.py  pyproject.toml
json-parser/parsers/: constants.py  exceptions.py  jsonparser.py  lexer.py
load-balancer/: Dockerfile  Makefile  app.py  docker-compose.yaml  lb.py  pyproject.toml  requirements.txt  server.py  testing_script.py
py-proxy/: banned-list.txt  main.py
py-wc/: README.md  pyproject.toml
py-wc/py_wc/: cli.py
pycurl/: pyproject.toml  requirements.txt
pycurl/src/pycurl/: __init__.py  cli.py  client.py  commons.py
sort-tool/sorting-tool/: README.md  pyproject.toml  simple-words.txt
sort-tool/sorting-tool/tests/: test_sorting_tool.py
sorting-tool/: pyproject.toml
sorting-tool/sorting_tool/: cli.py
wc-tool/: README.md  pyproject.toml  wc.py
