[tool.poetry]
name = "json-parser"
version = "0.1.0"
description = ""
authors = ["Ismailtlem <ismail.tlemcani.91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
