[project]
name = "pycurl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ismail", email = "ismail@ismailtlemcani.com" }]
requires-python = ">=3.12"
dependencies = ["click>=8.1.7"]

[project.scripts]
pycurl = "pycurl.cli:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
